# braslina

./: .coderabbit.yaml  .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ac4989b10e96_initial_merchants_checklists_check_.py
docs/: n8n-integration.md
docs/meetings/: 2026-04-15-braslina-demo.md
docs/runbooks/: backup-restore.md  deploy.md  rollback.md
docs/spec/: api-security.md  architecture.md  coding-conventions.md  config-contract.md  domain-model.md  merchant-onboarding-feature.md  module-boundaries.md  mvp-plan.md  observability.md
n8n/workflows/: merchant_onboarding.json  website_monitor_cron.json
scripts/: backup_db.sh  restore_db.sh
src/: celery_app.py  main.py
src/agent/: db_models.py  monitor.py  repository.py  router.py  schemas.py  service.py
src/checklist/: .repository.py.swp  db_models.py  engine.py  repository.py.bak  router.py  schemas.py  service.py
src/common/: auth.py  config.py  database.py  exceptions.py  health.py  idempotency.py  init_db.py  logging.py  metrics.py  rate_limit.py  seed.py  workflow.py
src/crm/: db_models.py  repository.py  router.py  schemas.py  service.py  tasks.py  webhooks.py
src/purchases/: db_models.py  log.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  conftest.py.bak  test_api.py
ui/: app.js  index.html  style.css
(+15 files in other folders)
